# protocolbuf_rabbitmq

./: .gitmodules  CMakeList.txt  CMakeLists.txt  ProtOnRbt.sln  README  README.md  clean.py  conf.ini
include/: common.h  commontools.h  microtimer.h  timer.h
lib/share/x64/Debug/: rabbitmq.4.exp  rabbitmq.4.ilk  rabbitmq.4.lib
lib/share/x64/Release/: rabbitmq.4.exp  rabbitmq.4.lib
lib/share/x86/Debug/: rabbitmq.4.lib
lib/share/x86/Release/: rabbitmq.4.exp  rabbitmq.4.lib
lib/static/x64/Debug/: librabbitmq.4.lib
lib/static/x64/Release/: librabbitmq.4.lib
lib/static/x86/Debug/: librabbitmq.4.lib
lib/static/x86/Release/: librabbitmq.4.lib
makefile/: CMakeList.txt  qmake.pro  rabbitmq_cpp.vcxproj
protobuf/: protobuf.vcxproj
rabbitmq/: rabbitmq_cpp.vcxproj
rabbitmq/python/: consumer.py  producer.py  rpc_client.py  rpc_server.py
src/: inipaser.cpp  inipaser.h  rabbitmq.cpp  rabbitmq.h
src/proto/: addressbook.proto  protoc.py  stulist.proto
test/: Client.vcxproj  Server.vcxproj  client.cpp  pack.cpp  pack.h  protobuf_test.cpp  rabbitma_test.cpp  server.cpp  test_main.cpp
third/protobuf/lib/x64/: libprotobuf-lite.lib  libprotobuf-lited.lib  libprotobuf.lib  libprotobufd.lib  libprotoc.lib
third/protobuf/lib/x86/: libprotobuf-lite.lib  libprotobuf-lited.lib  libprotobuf.lib  libprotobufd.lib  libprotoc.lib  libprotocd.lib
third/rabbitmq/lib/x64/: librabbitmq.4.lib  librabbitmqd.4.lib
third/rabbitmq/lib/x64/Release/: librabbitmq.4.lib
third/rabbitmq/lib/x86/: librabbitmq.4.lib  librabbitmqd.4.lib
third/rabbitmq/lib/x86/Release/: librabbitmq.4.lib
